똥 생성 속도 빠르게

--- a/poop_avoiding/index.html
+++ b/poop_avoiding/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
     <div id="game-container">
-        <img id="player" src="player.jpg" alt="Player">
+        <img id="player" src="jolaman.jpg" alt="Player">
         <div id="score">점수: 0</div>
         <div id="game-over">
             <h2>게임 오버!</h2>
